--- a/package.json
+++ b/package.json
@@ -10,9 +10,20 @@
     "@types/node": "^12.0.0",
     "@types/react": "^16.9.0",
     "@types/react-dom": "^16.9.0",
+    "@types/react-router-dom": "^5.1.5",
+    "@types/request": "^2.48.5",
+    "firebase": "^7.19.1",
+    "firebaseui": "^4.6.1",
+    "formik": "^2.1.5",
+    "mobx": "^5.15.6",
+    "mobx-react": "^6.3.0",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
+    "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.3",
+    "request": "^2.88.2",
+    "semantic-ui-css": "^2.4.1",
+    "semantic-ui-react": "^1.2.1",
     "typescript": "~3.7.2"
   },
   "scripts": {
