--- a/package.json
+++ b/package.json
@@ -12,11 +12,13 @@
     "@types/react-dom": "^16.9.0",
     "@types/react-router-dom": "^5.1.5",
     "@types/request": "^2.48.5",
+    "antd": "^4.15.3",
     "firebase": "^7.19.1",
     "firebaseui": "^4.6.1",
     "formik": "^2.1.5",
     "mobx": "^5.15.6",
     "mobx-react": "^6.3.0",
+    "moment": "^2.29.1",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-router-dom": "^5.2.0",
@@ -24,7 +26,7 @@
     "request": "^2.88.2",
     "semantic-ui-css": "^2.4.1",
     "semantic-ui-react": "^1.2.1",
-    "typescript": "~3.7.2"
+    "typescript": "~4.2.4"
   },
   "scripts": {
     "start": "react-scripts start",
